CHANGES IN VERSION 1.11.0
-------------------------

    o 


CHANGES IN VERSION 1.10.0-1.10.2
-------------------------

    o The version number was bumped for the Bioconductor release version 3.2

    o fix a memory issue in `seqAlleleFreq()` when 'ref.allele' is a vector

    o `seqSetFilter()` allows numeric vectors in 'samp.sel' and 'variant.sel'


CHANGES IN VERSION 1.9.0-1.9.19
-------------------------

    o a new function `seqGDS2SNP()`

    o supported by the SNPRelate package

    o support `seqApply(..., margin="by.sample")`

    o new functions `seqOptimize()`, `seqMissing()`, `seqAlleleFreq()`,
      `seqNumAllele()` and `seqSetFilterChrom()`

    o "intersection" and "push+intersection" in `seqSetFilter()`

    o parallel implementation in `seqNumAllele()`, `seqMissing()` and
      `seqAlleleFreq()`

    o a new function `seqExport()`

    o new argument ".useraw" in `seqApply()`

    o fix a bug for duplicated "variant.id",
      https://github.com/zhengxwen/SeqArray/issues/7

    o fix an issue of `seqVCF2GDS()` when there are duplicated format or
      info ID

    o improve access speed (+50%, benchmark on calling
      seqApply(..., FUN=function(x) {}))

    o new functions `seqSNP2GDS()`, `seqBED2GDS()`, `seqAlleleCount()` and
      `seqResetFilter()`

    o `seqCompress.Option` is renamed to `seqStorage.Option`

    o "ZIP_RA" is the default value in `seqStorage.Option()` and other
      functions instead of "ZIP_RA.max"

    o `seqSetFilter()` becomes a S4 method


CHANGES IN VERSION 1.8.0
-------------------------

    o The version number was bumped for the Bioconductor release version 3.1


CHANGES IN VERSION 1.7.1-1.7.5
-------------------------

    o bug fix in getting genotypes if position > 2^31

    o add an option 'ignore.chr.prefix' to the function `seqVCF2GDS()`

    o `seqVCF2GDS()` ignores the INFO or FORMAT variables if they are not
      defined ahead

	o a new action 'push+set' in the function `seqSetFilter()`
