@@ -13,6 +13,8 @@ CHANGES IN VERSION 1.10.0-1.10.2
 
     o `seqSetFilter()` allows numeric vectors in 'samp.sel' and 'variant.sel'
 
+    o `seqSummary()` returns ploidy and reference
+
 
 CHANGES IN VERSION 1.9.0-1.9.19
 -------------------------
